--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'Children''s stories'
+- GITenberg
 title: The Book of One Syllable
 url: http://www.gutenberg.org/ebooks/23453
